Finishing fixing introduction

--- a/references.bib
+++ b/references.bib
@@ -205,7 +205,7 @@
 	author = {Zimmer, Lucas and Lindauer, Marius and Hutter, Frank},
 	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	publisher = {IEEE},
-	title = {Auto-Pytorch: Multi-Fidelity MetaLearning for Efficient and Robust AutoDL},
+	title = {Auto-Pytorch: Multi-Fidelity MetaLearning for Robust AutoDL},
 	year = {2021}}
 
 @inproceedings{drori2018alphad3m,
@@ -1406,4 +1406,88 @@ url = {https://bpspsychub.onlinelibrary.wiley.com/doi/abs/10.1111/j.2044-8279.19
 eprint = {https://bpspsychub.onlinelibrary.wiley.com/doi/pdf/10.1111/j.2044-8279.1985.tb02625.x},
 abstract = {Summary. Effective learning under institutional conditions requires, first, that students are aware of task demands and of their intentions of how, or even whether, to meet those demands, and, second, that they assess realistically, and exert control over, their own cognitive resources. The fulfilment of such conditions involves a sophisticated kind of metacognition, here called metalearning. The present paper describes a series of studies that collectively explicate the development and role of metalearning in the learning and study processes of secondary and tertiary students. Ability patterns, locus of control, variety and quality of certain non-school experiences, and extent and kind of motivation all seem to be involved in the development of metalearning capability. A model of student learning is then described, in which personal and situational factors are linked to performance by three main approaches to learning: deep, achieving, and surface. These approaches involve varying degrees of metalearning and lead to qualitatively different learning outcomes. An intervention study on improving student learning is described that tests important aspects of the model, and further implications for teaching and research are suggested.},
 year = {1985}
+}
+
+@article{hey2020machinelearning,
+	author = {Hey, Tony and Butler, Keith and Jackson, Sam and Thiyagalingam, Jeyarajan},
+	year = {2020},
+	month = {03},
+	pages = {20190054},
+	title = {Machine learning and big scientific data},
+	volume = {378},
+	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	doi = {10.1098/rsta.2019.0054}
+}
+
+@book{hutter2019autmlbook,
+	author = {Hutter, Frank and Kotthoff, Lars and Vanschoren, Joaquin},
+	title = {Automated Machine Learning: Methods, Systems, Challenges},
+	year = {2019},
+	isbn = {3030053172},
+	publisher = {Springer Publishing Company, Incorporated},
+	edition = {1st},
+	abstract = {This open access book presents the first comprehensive overview of general methods
+	in Automated Machine Learning (AutoML), collects descriptions of existing systems
+	based on these methods, and discusses the first series of international challenges
+	of AutoML systems. The recent success of commercial ML applications and the rapid
+	growth of the field has created a high demand for off-the-shelf ML methods that can
+	be used easily and without expert knowledge. However, many of the recent machine learning
+	successes crucially rely on human experts, who manually select appropriate ML architectures
+	(deep learning architectures or more traditional ML workflows) and their hyperparameters.
+	To overcome this problem, the field of AutoML targets a progressive automation of
+	machine learning, based on principles from optimization and machine learning itself.
+	This book serves as a point of entry into this quickly-developing field for researchers
+	and advanced students alike, as well as providing a reference for practitioners aiming
+	to use AutoML in their work.}
+}
+
+@article{xin2019automl,
+	author    = {Xin He and
+	Kaiyong Zhao and
+	Xiaowen Chu},
+	title     = {AutoML: {A} Survey of the State-of-the-Art},
+	journal   = {CoRR},
+	volume    = {abs/1908.00709},
+	year      = {2019},
+	url       = {http://arxiv.org/abs/1908.00709},
+	eprinttype = {arXiv},
+	eprint    = {1908.00709},
+	timestamp = {Thu, 28 Oct 2021 13:52:50 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1908-00709.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{dyrmishi2019decision,
+	author = {Dyrmishi, Salijona and El Shawi, Radwa and Sakr, Sherif},
+	year = {2019},
+	month = {11},
+	pages = {97-106},
+	title = {A Decision Support Framework for AutoML Systems: A Meta-Learning Approach},
+	doi = {10.1109/ICDMW.2019.00025}
+}
+
+@article{radwa2019automated,
+	author    = {Radwa El Shawi and
+	Mohamed Maher and
+	Sherif Sakr},
+	title     = {Automated Machine Learning: State-of-The-Art and Open Challenges},
+	journal   = {CoRR},
+	volume    = {abs/1906.02287},
+	year      = {2019},
+	url       = {http://arxiv.org/abs/1906.02287},
+	eprinttype = {arXiv},
+	eprint    = {1906.02287},
+	timestamp = {Thu, 13 Jun 2019 13:36:00 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1906-02287.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Xin,
+	place = {Country unknown/Code not available}, 
+	title = {Whither AutoML? Understanding the Role of Automation in Machine Learning Workflows}, 
+	url = {https://par.nsf.gov/biblio/10216118}, 
+	abstractNote = {}, 
+	year = {2021},
+	journal = {Human factors in computing systems}, 
+	author = {Doris Xin, Eva Yiwei}
 }
