--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = es_ES
 %===================================================================================
 % Chapter: Introduction
 %===================================================================================
@@ -9,18 +10,18 @@
 
 En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje automático, en inglés \textit{machine learning} (ML)~\cite{hey2020machinelearning}. Sin embargo, el rendimiento de muchos métodos de aprendizaje de máquinas es sensible a una gran variedad de decisiones~\cite{dyrmishi2019decision, radwa2019automated}, lo que constituye una barrera para nuevos usuarios~\cite{crisan2021fits}. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (como \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para desarrollar modelos eficientes de aprendizaje automático.
 
-Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros y la selección de algoritmos)~\cite{thornton2013auto}, los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje de máquinas, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros~\cite{fuerer2015efficient, olson2019tpot, paszke2019pytorch, chen2018autostacker}.
+Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros y la selección de algoritmos)~\cite{thornton2013auto}, los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje de máquinas, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros~\cite{fuerer2015efficient, olson2019tpot, paszke2019pytorch, chen2018autostacker, swearingen2017atm}.
 
 AutoML está diseñado para reducir la demanda de los científicos de datos y permitir a los expertos construir automáticamente aplicaciones de ML sin mucho conocimiento estadístico y de aprendizaje automático. Por lo tanto, AutoML hace accesible enfoques de machine learning a los usuarios no expertos que están interesados en aplicarlos, pero no tienen los recursos para aprender sobre las tecnologías involucradas en detalle~\cite{hutter2019autmlbook}. Con el crecimiento exponencial del poder computacional y de los datos digitales, AutoML se ha convertido en un tema de creciente importancia tanto en la industria como en la academia~\cite{xin2019automl}. 
 
 Los enfoques de AutoML ya son lo suficientemente maduros como para
 rivalizar y, a veces, incluso superar a los expertos en aprendizaje automático humano. En pocas palabras, AutoML puede mejorar el rendimiento y, al mismo tiempo, ahorrar cantidades sustanciales de tiempo y dinero, ya que los expertos en aprendizaje automático son difíciles de encontrar y costosos. Como resultado, el interés comercial en AutoML ha crecido drásticamente en los últimos años, y varias de las principales empresas de tecnología están desarrollando sus propios sistemas AutoML~\cite{hutter2019autmlbook}.
 
-Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o meta-datos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de algoritmos de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
+Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas~\cite{dyrmishi2019decision}. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Meta-learning, o \textit{aprender a aprender}, es la ciencia de observar sistemáticamente cómo se desempeñan los diferentes enfoques de aprendizaje automático en una amplia gama de tareas de aprendizaje, y luego aprender de esta experiencia, o meta-datos, para aprender nuevas tareas mucho más rápido de lo que sería posible de otra manera. Esto no solo acelera y mejora drásticamente el diseño de algoritmos de aprendizaje automático, sino que también nos permite reemplazar algoritmos diseñados a mano con enfoques novedosos aprendidos de una manera basada en datos. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
 
 \section*{Problema}
 
-A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de ML es computacionalmente costosa y toma mucho tiempo~\cite{crisan2021fits}. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML~\cite{fuerer2015efficient}. Esto hace que el proceso de desarrollo de modelos de ML siga siendo un proceso tedioso y lento, limitando la aplicabilidad de AutoML a problemas prácticos en la industria, así como su potencial para acelerar la investigación científica
+A pesar de la creciente cantidad de herramientas de AutoML desarrolladas en los últimos años, la generación automática de ML es computacionalmente costosa y toma mucho tiempo~\cite{crisan2021fits}. Las razones de estos defectos incluyen un espacio de búsqueda muy grande, tanto para algoritmos simples de ML como para otras arquitecturas más complejas como redes neuronales, y que la evaluación de incluso un solo algoritmo en un dataset grande puede requerir horas. La optimización de los hiperparámetros, que es el núcleo de los sistemas de AutoML, es también un proceso generalmente lento, principalmente al principio al buscar en un espacio de hiperparámetros tan grande como aquellos presentes en un \textit{framework} de ML~\cite{fuerer2015efficient}. Esto hace que el proceso de desarrollo de modelos de ML siga siendo un proceso tedioso y lento, limitando la aplicabilidad de AutoML a problemas prácticos en la industria, así como su potencial para acelerar la investigación científica~\cite{crisan2021fits}.
 
 Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su inhabilidad de aprender de los datasets previamente analizados, lo que los fuerza a aprender desde cero con cada nuevo dataset. Esta ``pérdida de memoria'' hace que las herramientas de AutoML procesen innecesariamente soluciones inválidas. Por ejemplo, no son capaces de preveer que con pocos datos una red neuronal no va a obtener buenos resultados. 
 
@@ -33,10 +34,9 @@ En esta tesis se realiza una propuesta para superar estos obstáculos. El princi
 
 % Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En constraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener informacción más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
 
-Mediante meta-learning, se intenta ganar un poco de perspectiva sacada de los meta-datos de experimentos de ML. Los resultados de cada entrenamiento es guardado con caracterizaciones del dataset y sus detalles de rendimiento, y son usados en las ejecuciones futuras. Ha habido substancial interés en el espacio de meta-learning en los recientes años y muchos sistemas de AutoML lo han integrado.
+Mediante meta-learning, se intenta ganar un poco de perspectiva sacada de los meta-datos de experimentos de aprendizaje automático. Los resultados de cada entrenamiento es guardado con caracterizaciones del dataset y sus detalles de rendimiento, y son usados en las ejecuciones futuras. Ha habido substancial interés en el espacio de meta-learning en los recientes años y muchos sistemas de AutoML lo han integrado.
 
-Sin embargo, estas herramientas de meta-learning son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. Las técnicas actuales de meta-learning se centran principalmente en un subconjunto específico de algoritmos, a menudo adaptados a una biblioteca
-o conjunto de herramientas. Resolver problemas complejos, por otro lado, requiere de caracterizaciones representativas para los datasets y representaciones descriptivas para sus soluciones.
+Sin embargo, estas herramientas de meta-learning son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. Las técnicas actuales de meta-learning se centran principalmente en un subconjunto específico de algoritmos, a menudo adaptados a una biblioteca o conjunto de herramientas. Resolver problemas complejos, por otro lado, requiere la combinación de diferentes herramientas que podrían no estar disponibles en una misma biblioteca. Para la aplicación de meta-learning es necesario la representación de estos problemas mediante caracterizaciones informativas para los datasets y representaciones descriptivas para las soluciones obtenidas mediante diferentes herramientas. De esta forma, es posible que meta-learning sea capaz de resolver una gran cantidad de tareas.
 
 \section*{Antecedentes}
 
@@ -44,8 +44,7 @@ Esta tesis forma parte de las líneas de investigación del grupo de Inteligenci
 
 \section*{Objetivos}
 
-El objetivo general de esta tesis es el diseño de una estrategia de meta-learning para métodos genéricos de AutoML, a partir de la combinación de técnicas de aprendizaje automático y optimización. La estrategia implementada tendrá el objetivo de acelerar el proceso de búsqueda de AutoML añandiendo conocimiento previo, de tal manera que se obtengan mejores resultados en el mismo período de tiempo. 
-
+El objetivo general de esta tesis es el diseño de una estrategia de meta-learning para métodos genéricos de AutoML, a partir de la combinación de técnicas de aprendizaje automático y optimización. La estrategia implementada tendrá el objetivo de acelerar el proceso de búsqueda de AutoML añandiendo conocimiento previo, de tal manera que se obtengan mejores resultados en el mismo período de tiempo.
 
  Dado un dataset, una tarea de evaluación (por ejemplo, clasificación o regresión), el algoritmo de meta-learning propuesto tiene el objetivo de producir una lista de ranking de los modelos candidatos basada en el rendimiento esperado de estos modelos en el dataset dado. Esta lista es producida solamente con meta-conocimiento ganado del análisis de datasets relacionados y el entrenamiento de combinaciones de algoritmos en dichos datasets, sin ejecutar ninguno de los algoritmos candidatos. Teniendo este meta-conocimiento, es posible estimar el rendimiento de esos flujos y sugerirlos. Esta estimación, aunque no es exacta, mejorará el proceso de búsqueda de sistemas de aprendizaje de máquinas automático. Para realizar esto será necesario:
  
@@ -61,7 +60,7 @@ El objetivo general de esta tesis es el diseño de una estrategia de meta-learni
 
 \section*{Propuesta}
 
-El enfoque de meta-learning propuesto, está compuesto por dos fases principales: la fase offline, que es de aprendizaje y la fase online, que es de recomendación. El objetivo de la fase offline es obtener los meta-datos necesarios para la solución del problema de meta-learning propuesto: la obtención de un ranking de modelos de aprendizaje para una determinada tarea. En esta fase se obtiene una caracterización de los datasets y el rendimiento y la estructura de un conjunto soluciones en dichos datasets. Por otro lado en la fase online, dada una tarea con los meta-datos ganados del análisis de las tareas similares y el entrenamiento de un conjunto de algoritmos en dichos datasets, el objetivo es producir una lista de las soluciones prometedoras para resolver la tarea inicial. Esta lista será utilizada para sugerir rápidamente algunas inicializaciones para AutoGOAL.
+El enfoque de meta-learning propuesto, está compuesto por dos fases principales: la fase offline, que es de aprendizaje y la fase online, que es de recomendación. El objetivo de la fase offline es obtener los meta-datos necesarios para la solución del problema de meta-learning propuesto: la obtención de un ranking de modelos de aprendizaje para una determinada tarea. En esta fase se obtiene una caracterización de los datasets y el rendimiento y la estructura de un conjunto soluciones en dichos datasets. Por otro lado en la fase online, dada una tarea con los meta-datos ganados del análisis de las tareas similares y el entrenamiento de un conjunto de algoritmos en dichos datasets, el objetivo es producir una lista de las soluciones prometedoras para resolver la tarea inicial. Esta lista será utilizada para sugerir rápidamente algunas inicializaciones para el proceso de búsqueda de algoritmos de AutoGOAL.
 
 
 
