--- a/Thesis.tex
+++ b/Thesis.tex
@@ -15,6 +15,7 @@
 \floatstyle{plaintop}
 \restylefloat{table}
 \usepackage{graphicx}
+\usepackage{longtable}
 
 %\newtheorem{definition}{Definition}[section]
 
@@ -52,6 +53,9 @@
 
 
 \begin{document}
+
+\renewcommand{\arraystretch}{1.5}
+
 
 \frontmatter
 \maketitle
