Changing machine learning, aprendizaje de máquinas, pipeline terms

--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -8,9 +8,9 @@
 
 \qquad 
 
-En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje automático, en inglés \textit{machine learning} (ML)~\cite{hey2020machinelearning}. Sin embargo, el rendimiento de muchos métodos de aprendizaje de máquinas es sensible a una gran variedad de decisiones~\cite{dyrmishi2019decision, radwa2019automated}, lo que constituye una barrera para nuevos usuarios~\cite{crisan2021fits}. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (como \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para desarrollar modelos eficientes de aprendizaje automático.
+En los últimos tiempos ha habido una explosión en la investigación y aplicación del aprendizaje automático, en inglés \textit{machine learning} (ML)~\cite{hey2020machinelearning}. Sin embargo, el rendimiento de muchos métodos de aprendizaje automático es sensible a una gran variedad de decisiones~\cite{dyrmishi2019decision, radwa2019automated}, lo que constituye una barrera para nuevos usuarios~\cite{crisan2021fits}. Por ejemplo, el científico de datos debe seleccionar entre una amplia gama de posibles algoritmos, incluidas las técnicas de clasificación o regresión (como \textit{support vector machines}, redes neuronales, modelos bayesianos, árboles de decisión, etc.) y ajustar numerosos hiperparámetros del algoritmo seleccionado. Además, el rendimiento del modelo también se puede juzgar por varias métricas (por ejemplo, precisión, sensibilidad, medida F1). Incluso los expertos requieren gran cantidad de recursos y tiempo para crear modelos con buen rendimiento a causa del tedioso proceso de prueba y error que es repetido en cada aplicación para desarrollar modelos eficientes de aprendizaje automático.
 
-Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros y la selección de algoritmos)~\cite{thornton2013auto}, los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje de máquinas, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros~\cite{fuerer2015efficient, olson2019tpot, paszke2019pytorch, chen2018autostacker, swearingen2017atm}.
+Debido a los grandes costos de desarrollo, ha emergido una nueva idea para automatizar el proceso de ML, aprendizaje de máquinas automático, denominada \textit{Automated Machine Learning} o AutoML. AutoML abarca el diseño de técnicas para automatizar y facilitar todo el proceso de implementación, experimentación y despliegue de algoritmos de aprendizaje automático. Mientras que los primeros trabajos se centraron en tareas específicas de ML (como el ajuste de hiperparámetros y la selección de algoritmos)~\cite{thornton2013auto}, los estudios recientes buscan automatizar diferentes partes del proceso de aprendizaje automático, tales como la preparación de los datos, la selección de algoritmos y el ajustes de hiperparámetros~\cite{fuerer2015efficient, olson2019tpot, paszke2019pytorch, chen2018autostacker, swearingen2017atm}.
 
 AutoML está diseñado para reducir la demanda de los científicos de datos y permitir a los expertos construir automáticamente aplicaciones de ML sin mucho conocimiento estadístico y de aprendizaje automático. Por lo tanto, AutoML hace accesible enfoques de machine learning a los usuarios no expertos que están interesados en aplicarlos, pero no tienen los recursos para aprender sobre las tecnologías involucradas en detalle~\cite{hutter2019autmlbook}. Con el crecimiento exponencial del poder computacional y de los datos digitales, AutoML se ha convertido en un tema de creciente importancia tanto en la industria como en la academia~\cite{xin2019automl}. 
 
@@ -30,7 +30,7 @@ Otro de los problemas de la mayoría de los enfoques existentes de AutoML es su 
 
 \section*{Motivación}
 
-En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos en la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje de máquinas. Con el fin de lograr esto, se hace uso de técnicas de meta-learning. 
+En esta tesis se realiza una propuesta para superar estos obstáculos. El principal objetivo del enfoque propuesto es asistir a los profesionales de la industria y a los investigadores en ciencias de datos en la selección de modelos incorporando un componente en los sistemas AutoML. Este componente acelerará la búsqueda de AutoML proveyendo un conjunto inicial de algoritmos y las configuraciones de sus hiperparámetros. Esta recomendación inicial deberá en última instancia dar mejores resultados mediante el análisis previo de problemas relacionados. Por lo tanto, esta característica tiene como objetivo emular el rol del experto en el campo de aprendizaje automático. Con el fin de lograr esto, se hace uso de técnicas de meta-learning. 
 
 % Aunque a través meta-learning se pueden sugerir rápidamente algunas inicializaciones de los algoritmos de ML que son probables que tengan buenos resultados, no es posible obtener información detallada sobre sus rendimientos. En constraste, los algoritmos de optimización usados en herramientas de AutoML son lentos al buscar en grandes espacios de hiperparámetros, pero son capaces de obtener informacción más detallada sobre el rendimiento de los algoritmos de ML. Es por esto que el enfoque de meta-learning propuesto es complementario al proceso de optimización, seleccionando \textit{k} configuraciones de meta-learning y usando su resultado para inicializar el proceso de optimización.
 
